--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -1,5 +1,5 @@
 //Primary Color
-$color-primary: #ffff;
+$color-primary: #ffffff;
 $color-primary-light: rgb(45, 122, 238);
 $color-primary-dark: rgba(255, 154, 117, 0.815);
 
@@ -21,10 +21,10 @@ $color-white: #fff;
 $color-black: #000;
 
 //Font Color
-$default-font-size: 1.6rem;
+$default-font-size: 2.5rem;
 
 //GRID
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
+$gutter-vertical-small: 6rem;
 $gutter-horizontal: 6rem;
-$color-grey-light-1: #c3c3c3;
