--- a/assets/sass/abstracts/_mixins.scss
+++ b/assets/sass/abstracts/_mixins.scss
@@ -13,3 +13,35 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+// Media Queries Manager
+/*
+0 - 600px:        Phone
+600 - 900px:      Tablet portrait
+900 - 1200px:     Tablet landscape
+1200 - 1800px:    Normal styles apply
+1800px +:         Big desktop
+
+$breakpoint arguemnt choices:
+- phone
+- tab-port
+- tab-land
+- bigdesktop
+
+Order: Base + typography > general layout + grid > page layout > components
+*/
+
+@mixin respond($breakpoint) {
+  @if $breakpoint==phone {
+    @media (max-width: 37.5em) { @content }; //600px / 16 default px = 37.5 
+  }
+  @if $breakpoint==tab-port {
+    @media (max-width: 56.25em) { @content }; //900 px / 16 default px = 56.25
+  }
+  @if $breakpoint==tab-land{
+    @media (max-width: 75em) { @content }; //1200 px / 16 default px = 75
+  }
+  @if $breakpoint==big-desktop {
+    @media (min-width: 112.5em) { @content }; //1800 px / 16 default px = 112.5
+  }
+}
