--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -1,14 +1,21 @@
 .footer {
   background-color: $color-grey-dark-3;
   padding: 10rem 0;
-  font-size: 1.1rem;
+  font-size: 1.4rem;
   color: $color-grey-light-1;
+
+  @include respond(tab-port) {
+    padding: 8rem 0;
+  }
 
 
   &__logo-box {
     text-align: center;
     margin-bottom: 8rem;
 
+    @include respond(tab-port) {
+      margin-bottom: 4rem;
+    }
   }
 
   &__logo {
@@ -21,6 +28,11 @@
     border-top: 1px solid $color-grey-light-1;
     padding-top: 2rem;
     display: inline-block;
+
+    @include respond(tab-port) {
+      width: 100%;
+      text-align: center;
+    }
 
   }
 
@@ -58,5 +70,10 @@
     padding-top: 2rem;
     width: 80%;
     float: right;
+
+    @include respond(tab-port) {
+      width: 100%;
+      float: none;
+    }
   }
 }
