--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,13 +1,17 @@
 .header {
     height: 95vh;
     background-image: linear-gradient( to left top, rgba($color-primary-light, 0.22), rgba($color-primary-dark, 0.494)), url(../images/IMG_0745.jpg);
-    opacity: 0.92;
+    // opacity: 0.92;
     background-size: cover;
-    background-position: center;
+    background-position: top;
+    position: relative;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-    // border: 1px solid $color-black;
-    position: relative;
+    
+    @include respond(phone) {
+          -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+          clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    }
     &__logo-box {
         position: absolute;
         top: 4rem;
