--- a/assets/sass/components/_aboutme.scss
+++ b/assets/sass/components/_aboutme.scss
@@ -9,6 +9,17 @@
   font-size: $default-font-size;
   transform: skewX(-12deg);
 
+  @include respond(tab-port) {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 6.5rem;
+  }
+
+  @include respond(phone) {
+  transform: skewX(0);
+
+  }
+
   //Image of my face
   &__shape {
     width: 15rem;
@@ -22,17 +33,26 @@
     position: relative;
     transform: translateX(-3rem) skewX(12deg);
 
-
-    // @include respond(phone) {
-    //   transform: translate(-3rem) skewX(0);    
-    // }
+     @include respond(phone) {
+       transform: translateX(-3rem) skewX(0);
+     }
   }
   &__img {
     width: 130%;
     backface-visibility: hidden;
+    
   }
 
   &__text {
-  transform: skewX(12deg);
+    transform: skewX(12deg);
+
+  @include respond(phone) {
+     transform: skewX(0);
+  }
+
+  @include respond(phone) {
+    transform: skewX(0);
+  }
   }  
+
 }
