--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -30,7 +30,7 @@
     }
 
     &--white {
-        background-color: $color-primary-light;
+        background-color: $color-primary;
         /* text-shadow: .1rem .1rem; */
         color: $color-grey-dark;
         // padding-top: .1rem;
@@ -40,7 +40,7 @@
         }
     }
     &--blue {
-        background-color: $color-primary-light;
+        background-color: $color-primary;
         /* text-shadow: .1rem .1rem; */
         color: $color-black;
         // padding-top: .1rem;
