--- a/assets/sass/components/_popup.scss
+++ b/assets/sass/components/_popup.scss
@@ -10,7 +10,7 @@
   visibility: hidden;
   transition: all .3s;
 
-
+  
   &__content {
     @include absCenter;
     width: 75%;
@@ -22,10 +22,33 @@
     opacity: 0;
     transform: translate(-50%, -50%) scale(0);
     transition: all .2s .1s;
+
+     @include respond(tab-land) {
+       width: auto;
+     }
+
+     @include respond(tab-port) {
+       width: auto;
+     }
+
+     @include respond(phone) {
+       display: block;
+       position: relative;
+     }
+
+  
   }
   &__left {
     width: 33.3333333%;
     display: table-cell;
+
+    @include respond(tab-port) {
+      vertical-align: middle;
+    }
+
+    @include respond(phone) {
+      display: block;
+    }
   }
   &__right {
     width: 66.6666667%;
@@ -36,6 +59,14 @@
   &__img {
     display: block;
     width: 100%;
+    @include respond(tab-port) {
+      display: none;
+    }
+
+    @include respond(phone) {
+      display: none;
+    }
+    
   }
   &__text {
     font-size: 1.4rem;
@@ -80,4 +111,6 @@
       color: $color-primary;
     }
   }
+ 
+  
 }
