--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -35,10 +35,10 @@
 
 .section-aboutme {
     position: relative;
-    padding: 15rem 0;
+    padding: 10rem 0;
 
     @include respond(tab-port) {
-        padding: 10rem 0;
+        padding: 5rem 0;
     }
 }
 
@@ -54,18 +54,40 @@
 
 .book {
     background-image: linear-gradient(105deg,
-            rgba($color-white, .6) 0%,
-            rgba($color-white, .3) 50%,
+            rgba($color-white, .9) 0%,
+            rgba($color-white, .9) 50%,
             transparent 50%),
             url(../images/nat-8.jpeg);
     background-size: 100%;
     border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($color-black, .3);
 
-    height: 50rem;
+    @include respond(tab-land) {
+        background-image: linear-gradient(105deg,
+            rgba($color-white, .9) 0%,
+            rgba($color-white, .9) 65%,
+            transparent 65%),
+            url(../images/nat-8.jpeg);
+            background-size: cover;
+    }
+
+    @include respond(tab-port) {
+        background-image: linear-gradient(to right,
+            rgba($color-white, .9) 0%,
+            rgba($color-white, .9) 100%),
+            url(../images/nat-8.jpeg);
+    }
 
     &__form {
         width: 50%;
         padding: 6rem;
+
+        @include respond(tab-land) {
+            width: 65%;
+        }
+
+        @include respond(tab-port) {
+            width: 100%;
+        }
     }
 }
