--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,26 +1,39 @@
 .header {
-    height: 95vh;
-    background-image: linear-gradient( to left top, rgba($color-primary-light, 0.22), rgba($color-primary-dark, 0.494)), url(../images/IMG_0745.jpg);
-    // opacity: 0.92;
+    height: 85vh;
+    background-image: linear-gradient( to left top, rgba($color-primary-light, 0.22), rgba($color-primary-dark, 0.494)), url(../images/IMG_0745.jpg); // opacity: 0.92;
     background-size: cover;
     background-position: top;
     position: relative;
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-    
-    @include respond(phone) {
-          -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
-          clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    // -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+    // clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+
+    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+        height: 95vh;
     }
+
+    @media (min-resolution: 192dpi) and (min-width: 37.5em),
+    (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em),
+    (min-width: 125em) {
+        background-image: linear-gradient( to left top, rgba($color-primary-light, 0.22), rgba($color-primary-dark, 0.494)), url(../images/IMG_0745.jpg);
+    }
+
+    @include respond(phone) {
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
+    }
+
     &__logo-box {
         position: absolute;
         top: 4rem;
-        left: 4rem;
-        // background: hidden;
+        left: 4rem; // background: hidden;
     }
+
     &__logo {
         height: 3.5rem;
     }
+
     &__text-box {
         position: absolute;
         top: 40%;
