--- a/assets/sass/base/_base.scss
+++ b/assets/sass/base/_base.scss
@@ -30,3 +30,9 @@ body {
 }
 }
 
+// the selector of the cards
+::selection {
+    background-color: $color-primary;
+    color: $color-primary-dark;
+}
+
