--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -74,6 +74,7 @@ body {
 
 .paragraph {
     font-size: $default-font-size;
+    // everything except the last child
     &:not(:last-child) {
         margin-bottom: 3rem;
     }
