--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -1,3 +1,4 @@
+// Component for the first about feature
 .section-about {
     background-color: $color-grey-light-1; // About Section: Change padding to make larger in height
     padding: 25rem 0;
@@ -7,7 +8,7 @@
         padding: 15rem 0;
     }
 }
-
+// Second part of the features 
 .section-features {
     padding: 20rem 0;
     background-image: linear-gradient( to left top, rgba($color-primary-light, 0.22), rgba($color-primary-dark, 0.494)), url(../images/nat-4.jpg);
@@ -23,6 +24,7 @@
     }
 }
 
+// Third part about the projects
 .section-tours {
     background-color: $color-grey-light-1; // About Section: Change padding to make larger in height
     padding: 25rem 0 15rem 0;
@@ -33,6 +35,7 @@
     }
 }
 
+// Fourth about me, to emphasize about me as a developer
 .section-aboutme {
     position: relative;
     padding: 10rem 0;
@@ -42,6 +45,7 @@
     }
 }
 
+// Fifth is the form
 .section-book {
     padding: 15rem 0;
     background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
@@ -52,6 +56,7 @@
 
 }
 
+// Pop up form
 .book {
     background-image: linear-gradient(105deg,
             rgba($color-white, .9) 0%,
