--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,7 @@ body {
 
 .heading-secondary {
   font-size: 3.5rem;
+  margin-bottom: 3.0rem;
   text-transform: uppercase;
   font-weight: 700;
   display: inline-block;
@@ -202,7 +203,7 @@ body {
       .aboutme__shape {
         transform: translateX(-3rem) skewX(0); } }
   .aboutme__img {
-    width: 130%;
+    width: 100%;
     backface-visibility: hidden; }
   .aboutme__text {
     transform: skewX(12deg); }
@@ -475,6 +476,7 @@ body {
   background-color: rgba(255, 255, 255, 0.8);
   font-size: 1.5rem;
   padding: 2.5rem;
+  position: relative;
   text-align: center;
   border-radius: 3px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
@@ -535,103 +537,6 @@ body {
   opacity: 0;
   visibility: hidden;
   transform: translateY(-4rem); }
-
-.popup {
-  height: 100vh;
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 9999;
-  opacity: 0;
-  visibility: hidden;
-  transition: all .3s;
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px); }
-  @supports (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
-    .popup {
-      -webkit-backdrop-filter: blur(10px);
-      backdrop-filter: blur(10px);
-      background-color: rgba(0, 0, 0, 0.8); } }
-  .popup__content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 75%;
-    background-color: #fff;
-    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
-    border-radius: 3px;
-    display: table;
-    overflow: hidden;
-    opacity: 0;
-    transform: translate(-50%, -50%) scale(0);
-    transition: all .2s .1s; }
-    @media only screen and (max-width: 75em) {
-      .popup__content {
-        width: auto; } }
-    @media only screen and (max-width: 56.25em) {
-      .popup__content {
-        width: auto; } }
-    @media only screen and (max-width: 37.5em) {
-      .popup__content {
-        display: block;
-        position: relative; } }
-  .popup__left {
-    width: 33.3333333%;
-    display: table-cell; }
-    @media only screen and (max-width: 56.25em) {
-      .popup__left {
-        vertical-align: middle; } }
-    @media only screen and (max-width: 37.5em) {
-      .popup__left {
-        display: block; } }
-  .popup__right {
-    width: 66.6666667%;
-    display: table-cell;
-    vertical-align: middle;
-    padding: 3rem 5rem; }
-  .popup__img {
-    display: block;
-    width: 100%; }
-    @media only screen and (max-width: 56.25em) {
-      .popup__img {
-        display: none; } }
-    @media only screen and (max-width: 37.5em) {
-      .popup__img {
-        display: none; } }
-  .popup__text {
-    font-size: 1.4rem;
-    margin-bottom: 4rem;
-    -moz-column-count: 2;
-    -moz-column-gap: 4rem;
-    -moz-column-rule: 1px solid #eee;
-    column-count: 2;
-    column-gap: 4rem;
-    column-rule: 1px solid #eee;
-    -moz-hyphens: auto;
-    -ms-hypens: auto;
-    -webkit-hyphens: auto;
-    hyphens: auto; }
-  .popup:target {
-    opacity: 1;
-    visibility: visible; }
-  .popup:target .popup__content {
-    opacity: 1;
-    transform: translate(-50%, -50%) scale(1); }
-  .popup__close:link, .popup__closevisited {
-    color: #777;
-    position: absolute;
-    top: 2.5rem;
-    right: 2.5rem;
-    font-size: 3rem;
-    text-decoration: none;
-    display: inline-block;
-    transition: all .2s;
-    line-height: 1rem; }
-  .popup__close:hover {
-    color: #ffffff; }
 
 .footer {
   background-color: #333;
@@ -717,7 +622,7 @@ body {
   .row .col-2-of-3 {
     width: calc(2 * ((100% - 2 * 6rem) /3) + 6rem); }
   .row .col-1-of-4 {
-    width: calc((100% - 3 * 6rem) /4); }
+    width: calc((100% - 3 * 6rem) /3); }
   .row .col-2-of-4 {
     width: calc(2 * ((100% - 3 * 6rem) /4) + 6rem); }
   .row .col-3-of-4 {
