--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -43,7 +43,7 @@ body {
 
 .heading-secondary {
     font-size: 3.5rem;
-    // margin-bottom: 0.9rem;
+    margin-bottom: 3.0rem;
     text-transform: uppercase;
     font-weight: 700;
     display: inline-block; // Change color later on for h2 secondary heading
